test/rewriter/errors/expr_integer_literal_binary.ml
let invalid_integer_literal = [%yojson 0b1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111]
